--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,55 @@
   This is a SAMPLE File to get you started. Follow the instructions on the project to complete the tasks. 
   You'll probably need to override some of theese styles.
 */
+html {line-height: 1.15; /* 1 */ -webkit-text-size-adjust: 100%; /* 2 */}
+body {margin: 0;}
+main {display: block;}
+h1 {font-size: 2em; margin: 0.67em 0;}
+hr {box-sizing: content-box; /* 1 */height: 0; /* 1 */overflow: visible; /* 2 */}
+pre {font-family: monospace, monospace; /* 1 */font-size: 1em; /* 2 */}
+a {background-color: transparent;}
+abbr[title] {border-bottom: none; /* 1 */text-decoration: underline; /* 2 */text-decoration: underline dotted; /* 2 */}
+b,strong {font-weight: bolder;}
+code, kbd, samp {font-family: monospace, monospace; /* 1 */font-size: 1em; /* 2 */}
+small {font-size: 80%;}
+sub, sup {font-size: 75%;line-height: 0;position: relative;vertical-align: baseline;}
+sub {bottom: -0.25em;}
+sup {top: -0.5em;}
+img {border-style: none;}
+button, input, optgroup, select, textarea {font-family: inherit; /* 1 */font-size: 100%; /* 1 */line-height: 1.15; /* 1 */margin: 0; /* 2 */}
+button, input { /* 1 */overflow: visible;}
+button, select { /* 1 */text-transform: none;}
+button, [type="button"], [type="reset"], [type="submit"] {-webkit-appearance: button;}
+button::-moz-focus-inner, [type="button"]::-moz-focus-inner, [type="reset"]::-moz-focus-inner, [type="submit"]::-moz-focus-inner {border-style: none; padding: 0;}
+button:-moz-focusring, [type="button"]:-moz-focusring, [type="reset"]:-moz-focusring, [type="submit"]:-moz-focusring {outline: 1px dotted ButtonText;}
+fieldset {padding: 0.35em 0.75em 0.625em;}
+legend {box-sizing: border-box; /* 1 */color: inherit; /* 2 */display: table; /* 1 */max-width: 100%; /* 1 */padding: 0; /* 3 */white-space: normal; /* 1 */}
+progress {vertical-align: baseline;}
+textarea {overflow: auto;}
+[type="checkbox"],[type="radio"] {box-sizing: border-box; /* 1 */padding: 0; /* 2 */}
+[type="number"]::-webkit-inner-spin-button,[type="number"]::-webkit-outer-spin-button {height: auto;}
+[type="search"] {-webkit-appearance: textfield; /* 1 */outline-offset: -2px; /* 2 */}
+[type="search"]::-webkit-search-decoration {-webkit-appearance: none;}
+::-webkit-file-upload-button {-webkit-appearance: button; /* 1 */font: inherit; /* 2 */}
+details {display: block;}
+summary {display: list-item;}
+template {display: none;}
+[hidden] {display: none;}
+
+
+
+
+:root {
+    --primary-color: chocolate;
+    --botton-color: var(--primary-color);
+    --letter-color: black;
+    --external-letter-color: white;
+    --backgrond-color: #f4f4f4;
+    --box-shadow: 1px 1px 20px 1px rgba(0, 0, 0, 0.2);
+
+    --botton-color-hover: burlywood;
+    --botton-text-hover: var(--botton-color);
+}
 
 * {
     box-sizing: border-box;
@@ -12,21 +61,161 @@
 
 body {
     background-color: #f4f4f4;
-    color: #333;
+    color: var(--letter-color);
 }
 
 header {
-    background-color: #333;
-    color: #fff;
+    background-color: var(--primary-color);
     padding: 1rem;
 }
 
+footer {
+    background-color: var(--primary-color);
+    color: var(--external-letter-color);
+    justify-content: center;
+    display: flex;
+}
+
+nav {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
 nav a {
-    color: #fff;
+    color: var(--external-letter-color);
     text-decoration: none;
     margin-left: 1rem;
+    margin-right: 1rem;
 }
+
 
 main {
     padding: 2rem;
+}
+
+.place-card {
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    flex-wrap: wrap;
+    width: 100%;
+    height: auto;
+    
+}
+
+.details-button {
+    margin: 20px;
+    padding: 10px;
+    border: 1px solid #ddd;
+    border-radius: 10px;
+    text-align: center;
+    height: 250px;
+    width: 250px;
+    box-shadow: var(--box-shadow);
+}
+
+.details-button h3, p {
+    margin: 20px;
+}
+
+.details-button button {
+    background-color: var(--botton-color);
+    padding: 10px;
+    border-radius: 10px;
+    border: 1px solid transparent;
+    color: var(--external-letter-color);
+}
+
+.details-button button:hover {
+    background-color: var(--botton-color-hover);
+    color: var(--botton-text-hover);
+}
+
+#filter {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+#filter h3 {
+    font-size: 1.5rem;
+    margin: 10px;
+}
+
+/* label #country-filter {
+    text-decoration: solid;
+} */
+
+#country-filter {
+    padding: 3px;
+    border: 1px solid #ddd;
+    border-radius: 5px;
+    width: 100px;
+}
+
+#place-details{
+    text-align: center;
+}
+
+.place-info {
+    margin: 5px;
+    padding: 30px;
+    border: 1px solid #ddd;
+    border-radius: 10px;
+    box-shadow: var(--box-shadow);
+}
+
+#reviews h2{
+        justify-content: space-between;
+}
+
+.review-card {
+    margin: 10px;
+    border: 1px solid #ddd;
+    padding: 10px 5px;
+    border-radius: 10px;
+    box-shadow: var(--box-shadow);
+
+}
+
+#add-review {
+    font-weight: bold;
+    margin: 5px;
+}
+
+#review-text {
+    width: 100%;
+    margin: 5px 0px;
+    border: 1px solid transparent;
+    box-shadow: var(--box-shadow);
+    border-radius: 5px;
+    height: 4rem;
+}
+
+#rating-stars {
+    width: 100%;
+    padding: 7px;
+    margin: 5px 0px;
+    border: 1px solid transparent;
+    box-shadow: var(--box-shadow);
+    border-radius: 5px;
+    text-decoration: solid;
+}
+
+#review-form button {
+    background-color: var(--botton-color);
+    padding: 7px;
+    border-radius: 5px;
+    border: 1px solid transparent;
+    color: var(--external-letter-color);
+    width: 100%;
+    margin: 5px 0px;
+    font-weight: bold;
+}
+
+#review-form button:hover {
+    background-color: burlywood;
+    color: var(--botton-color);
 }
